--- a/styles.css
+++ b/styles.css
@@ -56,9 +56,9 @@ header{
 }
 
 .nav-container {
-    max-width: 1500px;
+    max-width: 1600px;
     margin: 0 auto;
-    padding: 0 20px;
+    padding: 0 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -548,11 +548,11 @@ header{
 .contact-info h2 {
     font-size: 2.5rem;
     margin-bottom: 24px;
-    color: var(--dark-blue);
+    color: #FFCC33;
 }
 
 .contact-info p {
-    color: var(--medium-gray);
+    color: #ffd451;
     line-height: 1.6;
     margin-bottom: 40px;
 }
@@ -582,17 +582,17 @@ header{
 
 .contact-item h4 {
     margin-bottom: 4px;
-    color: var(--dark-blue);
+    color: #FFCC33;
 }
 
 .contact-item p {
-    color: var(--medium-gray);
+    color:#edd55c;
     margin: 0;
 }
 
 /* Contact Form */
 .contact-form {
-    background: var(--white);
+    background:#441114;
     padding: 40px;
     border-radius: 16px;
     box-shadow: var(--shadow);
@@ -601,7 +601,7 @@ header{
 .contact-form h2 {
     font-size: 2rem;
     margin-bottom: 30px;
-    color: var(--dark-blue);
+    color:#e8a704;
 }
 
 .form-group {
@@ -612,28 +612,30 @@ header{
     display: block;
     margin-bottom: 8px;
     font-weight: 500;
-    color: var(--dark-gray);
+    color:#e8a704;
 }
 
 .form-group input,
 .form-group textarea {
     width: 100%;
     padding: 12px 16px;
-    border: 2px solid #E5E7EB;
+    border: 2px solid #edd55c;
     border-radius: 8px;
     font-size: 1rem;
     transition: border-color 0.3s ease;
+    background-color: #FFCC33;
 }
 
 .form-group input:focus,
 .form-group textarea:focus {
     outline: none;
-    border-color: var(--dark-blue);
+    border-color:#cb9303;
+    border-width: thick;
 }
 
 .submit-button {
-    background: var(--gradient-primary);
-    color: var(--white);
+    background: var(--gradient-button-hover);
+    color:#501114;
     padding: 14px 32px;
     border: none;
     border-radius: 8px;
@@ -646,6 +648,8 @@ header{
 .submit-button:hover {
     transform: translateY(-2px);
     box-shadow: var(--shadow);
+    background: var(--gradient-button);
+    color: #F5BC31;
 }
 
 /* Footer */
